--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,3 +1,24 @@
+p {
+    margin: 0px;
+}
+
+img {
+    display: block;
+}
+
+body {
+    position: relative;
+}
+
+.disable-scroll {
+    overflow: hidden;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
+
 .gallery {
     display: flex;
     justify-content: center;
@@ -10,8 +31,29 @@
 
 .photo-card {
     padding: 10px;
+    cursor: pointer;
 }
 
-p {
-    margin: 0px;
+.modal {
+    width:100%;
+    height: 100%;
+    margin: 0;
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: 1000;
+
+}
+
+.backdrop{
+display: flex;
+    justify-content: center;
+    align-items: center;
+        width: 100%;
+            height: 100%;
+            background-color: rgb(0, 0, 0, .7);
+}
+
+.modal-content {
+    border: 1px solid white;
 }
