--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -57,3 +57,25 @@ display: flex;
 .modal-content {
     border: 1px solid white;
 }
+
+.search-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
+
+.search-form input {
+    padding: 10px;
+    border: 1px solid blue;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+.search-form button {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid blue;
+    margin-right: 10px;
+    cursor: pointer;
+}
